thumbnailer (2.4+16.10.20160719-0ubuntu2) UNRELEASED; urgency=medium

  * Changed python-tornado dependency to python-tornado <!nocheck> for cross-builds.

 -- Michi Henning <michi.henning@canonical.com>  Mon, 25 Jul 2016 10:56:23 +1000

thumbnailer (2.4+16.10.20160719-0ubuntu1) yakkety; urgency=medium

  [ Michi Henning ]
  * Changed copyright from GPL to LGPL for two files used in storage framework.

  [ James Henstridge ]
  * Fixed pkgconfig file for qt library.

 -- Michi Henning <michi@triodia.com>  Tue, 19 Jul 2016 01:11:39 +0000

thumbnailer (2.4+16.10.20160530.3-0ubuntu1) yakkety; urgency=medium

  [ Michi Henning ]
  * Re-enabled copyright test on xenial and yakkety.

  [ CI Train Bot ]
  * No-change rebuild.

 -- Michi Henning <michi.henning@canonical.com>  Mon, 30 May 2016 11:07:33 +0000

thumbnailer (2.4+16.04.20160321-0ubuntu2) yakkety; urgency=medium

  * No-change rebuild for boost soname change.

 -- Matthias Klose <doko@ubuntu.com>  Sat, 23 Apr 2016 18:50:26 +0000

thumbnailer (2.4+16.04.20160321-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * vs-thumb now uses a separate pipe instead of writing to stdout (LP: #1556835).

  [ CI Train Bot ]
  * No-change rebuild.

 -- Michi Henning <michi.henning@canonical.com>  Mon, 21 Mar 2016 02:12:07 +0000

thumbnailer (2.4+16.04.20160302.1-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * Thumbnails now preserve transparency of source image (LP: #1532719, LP: #1541836).
  * Fixed incorrect tests when checking full-size cache hits (LP: #1540753).
  * Minor improvements to man pages.

  [ CI Train Bot ]
  * No-change rebuild.

 -- Michi Henning <michi.henning@canonical.com>  Wed, 02 Mar 2016 05:20:31 +0000

thumbnailer (2.4+16.04.20160226-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * Fixed incorrect build dependency for settings-defaults.h.
  * Re-enabled tests on powerpc and s390x, except for qml test.
  * Disabled vs-thumb test on powerpc64le due to gstreamer codec bug.