@@ -82,6 +82,20 @@ else()
     add_definitions(-DSLOW_TESTS=0)
 endif()
 
+# TODO: Hack to allow disabling tests that need QDBus on xenial and yakkety,
+#       due to broken Qt 5.6. Re-enable tests ASAP!
+option(skip-dbus-tests "Skip DBus tests" ON)
+if (${skip-dbus-tests})
+    execute_process(COMMAND lsb_release -s -c OUTPUT_VARIABLE distro OUTPUT_STRIP_TRAILING_WHITESPACE)
+    if (${distro} STREQUAL "xenial" OR ${distro} STREQUAL "yakkety")
+        message(WARNING "WARNING: Disabling DBus-related tests for ${distro}
+         See https://bugs.launchpad.net/ubuntu/+source/thumbnailer/+bug/1613561
+             https://bugs.launchpad.net/ubuntu/+source/qtbase-opensource-src/+bug/1625930")
+        add_definitions(-DSKIP_DBUS_TESTS=1)
+        add_definitions(-DDISTRO=\"${distro}\")
+    endif()
+endif()
+
 # Definitions for testing with valgrind.
 
 configure_file(CTestCustom.cmake.in CTestCustom.cmake) # Tests in CTestCustom.cmake are skipped for valgrind
