@@ -67,6 +67,13 @@ QJSValue make_test_config(QQmlEngine*, QJSEngine* scriptEngine)
 
 int main(int argc, char** argv)
 {
+#if defined(SKIP_DBUS_TESTS)
+    // TODO: Re-enable this ASAP!
+    qDebug() << "WARNING: Skipping tests on" << DISTRO;
+    qDebug() << "         See https://bugs.launchpad.net/ubuntu/+source/thumbnailer/+bug/1613561";
+    qDebug() << "             https://bugs.launchpad.net/ubuntu/+source/qtbase-opensource-src/+bug/1625930";
+    return 0;
+#endif
     QGuiApplication app(argc, argv);
 
     setenv("GSETTINGS_BACKEND", "memory", true);
