@@ -1,6 +1,10 @@
 thumbnailer (2.4+16.10.20160719-0ubuntu2) UNRELEASED; urgency=medium
 
   * Changed python-tornado dependency to python-tornado <!nocheck> for cross-builds.
+  * Disabled QDBus-related tests on xenial and yakkety for the time being due
+    to problems with Qt 5.6. See
+        https://bugs.launchpad.net/ubuntu/+source/thumbnailer/+bug/1613561
+        https://bugs.launchpad.net/ubuntu/+source/qtbase-opensource-src/+bug/1625930
 
  -- Michi Henning <michi.henning@canonical.com>  Mon, 25 Jul 2016 10:56:23 +1000
 
